# AdminHelperBot

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  shutdown.sh
src/: __main__.py  config.py  loader.py  models.py
src/actions/: __init__.py  add_sale.py  channels.py  start.py  test.py
src/assets/: commands.py  kbs.py  states.py  texts.py
src/core/: __init__.py  app.py  config.py  database.py  dispatcher.py  env.py  userbot.py
src/core/events/: click.py
src/core/keyboards/: inline_keyboard.py
src/events/: __init__.py  add_sale.py
src/handlers/: __init__.py  add_sale.py  channels.py  start.py  test.py  text.py
src/handlers/add_sale/: __init__.py  date.py  start.py  time.py
src/handlers/add_sale/channels/: __init__.py  finish.py  pick.py  pick_all.py
src/handlers/add_sale/post/: __init__.py  messages.py  skip.py
src/handlers/userbot/: __init__.py  phone_code.py  start.py
src/lib/: __init__.py  channels.py  chat_commands.py  date_and_time.py  sale.py
