[tool.poetry]
name = "admin-helper-bot"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
envparse = "^0.2.0"
aiogram = "^2.22.2"
pymongo = "^4.2.0"
motor = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
